<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:layout="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="openDrawer"
            app:backgroundTint="@android:color/background_light"
            app:srcCompat="@drawable/menu_icon" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/playback_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="100dp"
            android:layout_gravity="end|bottom"
            android:clickable="true"
            android:focusable="true"
            android:onClick="switchPlayback"
            app:srcCompat="@drawable/play_icon" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/confirm_button"
            android:visibility="gone"
            android:shadowColor="@android:color/holo_blue_bright"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/cancel_button"
            android:visibility="gone"
            android:shadowColor="@android:color/holo_blue_bright"/>

        <TextView
            android:id="@+id/seekBarPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="150dp"
            android:layout_marginLeft="-60dp"
            android:layout_marginStart="-60dp"
            android:visibility="gone"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/seekBarLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="bottom|center"
            android:layout_margin="150dp"
            android:text="@string/radius_textview"
            android:visibility="gone"
            android:textColor="@android:color/black"/>

        <SeekBar
            android:id="@+id/radiusSeekBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:scaleY="2.0"
            android:layout_margin="125dp"
            android:max="100"
            android:visibility="gone"/>

    </FrameLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/drawer_header"/>

</android.support.v4.widget.DrawerLayout>